--- a/clase17/mem-dy/mem-dy.cbp
+++ b/clase17/mem-dy/mem-dy.cbp
@@ -31,6 +31,14 @@
 		<Compiler>
 			<Add option="-Wall" />
 		</Compiler>
+		<Unit filename="arraylist.c">
+			<Option compilerVar="CC" />
+		</Unit>
+		<Unit filename="arraylist.h" />
+		<Unit filename="empleado.c">
+			<Option compilerVar="CC" />
+		</Unit>
+		<Unit filename="empleado.h" />
 		<Unit filename="main.c">
 			<Option compilerVar="CC" />
 		</Unit>
